--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
@@ -94,7 +94,7 @@
                                                                 <th> Login Id</th>
                                                                 <th>Name</th>
                                                                 <th>Status</th>
-                                                                @*<th>Date</th>*@
+                                                                <th>Date</th>
                                                                 @*<th>Last TopUp Amount</th>
                                                                 <th>Last TopUp Date</th>*@
                                                             </tr>
@@ -112,7 +112,7 @@
                                                                             <td>@Item.LoginId</td>
                                                                             <td>@Item.Name</td>
                                                                             <td>@Item.Status</td>
-                                                                            @*<td>@Item.Date</td>*@
+                                                                            <td>@Item.Date</td>
                                                                             @*<td>@Item.LastTopUpAmount</td>
                                                                             <td>@Item.LastTopUpDate</td>*@
                                                                         </tr>
