--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -162,11 +162,11 @@
 <script src="../vendor/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="~/scripts/jquery-1.10.2.js"></script>
-<script>
+@*<script>
     $(document).ready(function () {
         $("#myModal").modal('show');
     });
-</script>
+</script>*@
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -178,7 +178,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="newyear">
-                            <img style="width:100%" src="~/WebsiteCss/KohinoorCity.jpeg" class="img-responsive" />
+                            <img style="width:100%" src="~/WebsiteCss/Offer.jpeg" class="img-responsive" />
                         </div>
                     </div>
                 </div>
