--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -152,9 +152,9 @@
     <script src="../../AssociatePanelcss/app-assets/js/core/app.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
     <script>
-    //$(document).ready(function () {
-    //    $("#myModal").modal('show');
-    //});
+    $(document).ready(function () {
+        $("#myModal").modal('show');
+    });
     </script>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -167,7 +167,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="newyear">
-                                <img style="width:100%" src="../WebsiteCss/4.jpg" class="img-responsive" />
+                                <img style="width:100%" src="../WebsiteCss/Offer.jpeg" class="img-responsive" />
                             </div>
                         </div>
                     </div>
