--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -152,7 +152,7 @@
     <script src="../../AssociatePanelcss/app-assets/js/core/app.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
     <script>
-    $(document).ready(function () {
+    @*$(document).ready(function () {
         $("#myModal").modal('show');
     });
     </script>
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>*@ 
     <!-- END: Theme JS-->
     <!-- BEGIN: Page JS-->
     <!-- END: Page JS-->
