--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -346,3 +346,28 @@
         </div>
     </div>
 </div> 
+
+<script>
+    $(document).ready(function () {
+        $("#myModal1").modal('show');
+    });
+</script>
+<div id="myModal1" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" style="background-color: #fff;">×</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body" style="background-color: #fff;">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="newyear">
+                            <img src="~/WebsiteCss/KohinoorCity1.jpeg" style="width:100%" class="img-responsive"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
