--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -79,6 +79,9 @@
                                                                 <th>Plot Details</th>
                                                                 <th>Calculation Date</th>
                                                                 <th style="text-align:right">Amount</th>
+                                                                <th style="text-align:right">Payment Mode</th>
+                                                                <th style="text-align:right">Bank Name</th>
+                                                                <th style="text-align:right">Business Type</th>
                                                                 <th style="text-align:right;display:none">BV</th>
                                                             </tr>
                                                         </thead>
@@ -97,6 +100,9 @@
                                                                             <td>@Item.SiteName, @Item.SectorName, @Item.PlotNumber</td>
                                                                             <td>@Item.ClosingDate</td>
                                                                             <td style="text-align:right">@Item.NetAmount</td>
+                                                                            <td style="text-align:right">@Item.PaymentMode</td>
+                                                                            <td style="text-align:right">@Item.BankName</td>
+                                                                            <td style="text-align:right">@Item.BusinessType</td>
                                                                             <td style="text-align:right;display:none">@Item.LeadershipBonus</td>
                                                                         </tr>
                                                                         i++;
@@ -132,10 +138,10 @@
 
 
 <script src="../../WebsiteCss/js/jquery.js"></script>
- 
+
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
- 
+
 <script>
     $(document).ready(function () {
         $("input").attr("autocomplete", "off");
@@ -218,7 +224,6 @@
 </script>
 <style>
     .errortext {
-       border: 2px solid red !important;
-       
+        border: 2px solid red !important;
     }
 </style>
