--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -324,7 +324,8 @@
 <script src="~/scripts/jquery-1.10.2.js"></script>
 <script>
     $(document).ready(function () {
-        $("#myModal").modal('show');
+        //$("#myModal").modal('show');
+        $("#myModal1").modal('show');
     });
 </script>
 <div id="myModal" class="modal fade" role="dialog">
@@ -346,12 +347,6 @@
         </div>
     </div>
 </div> 
-
-<script>
-    $(document).ready(function () {
-        $("#myModal1").modal('show');
-    });
-</script>
 <div id="myModal1" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
