--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -62,6 +62,7 @@
                                                         <th>Amount</th>
                                                         <th>Transaction Date</th>
                                                         <th>TransactionNo</th>
+                                                        <th>Remarks</th>
                                                     </tr>
                                                 </thead>
                                                 <tfoot>
@@ -71,6 +72,7 @@
                                                         <th></th>
                                                         <th><b>Total</b></th>
                                                         <th>@ViewBag.Total</th>
+                                                        <th></th>
                                                         <th></th>
                                                         <th></th>
                                                     </tr>
@@ -92,6 +94,7 @@
                                                         <td>@Item.Amount</td>
                                                         <td>@Item.TransactionDate</td>
                                                         <td>@Item.TransactionNo</td>
+                                                        <td>@Item.ReceiptNo</td>
                                                     </tr>
                                                                 i++;
                                                             }
