--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -120,7 +120,13 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Plot Number <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number" })
+                                                        @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number", @onchange = "return CheckPlotStatus();" })
+
+                                                        @*@Html.HiddenFor(m => m.PlotID)
+                                                        @Html.HiddenFor(m => m.PlotSize)
+                                                        @Html.HiddenFor(m => m.BookingPercent)*@
+
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -653,6 +659,38 @@
         });
         $("#divload").css({ 'display': 'none' });
 
+    }
+
+
+    function CheckPlotStatus() {
+        debugger
+        $("#divload").css({ 'display': '' });
+        var siteID = $('#Fk_SiteId').val();
+        var sectorID = $('#FK_SectorId').val();
+        var block = $('#Fk_BlockId').val();
+        var plotno = $('#PlotNumber').val();
+
+        $.ajax({
+            url: '/Accounts/CheckPlot', type: 'get', dataType: 'json',
+            data: { 'SiteID': siteID, 'SectorID': sectorID, 'BlockID': block, 'PlotNumber': plotno },
+            success: function (data) {
+                $("#divload").css({ 'display': 'none' });
+                if (data.Result == "yes") {
+                    $("#PlotNumber").removeClass('errortext');
+                }
+                else if (data.Result == "no") {
+                    alert('Invalid Plot Number !');
+                    $("#PlotNumber").addClass('errortext');
+                    $('#PlotNumber').focus();
+                    $("#PlotNumber").val('');
+                }
+                else {
+                    alert('Plot not available !');
+                    $("#PlotNumber").addClass('errortext');
+                    $("#PlotNumber").val('');
+                }
+            }
+        });
     }
 </script>
 
