--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
@@ -8,8 +8,6 @@
 
 @using (Html.BeginForm("AdvancePaymentReport", "Admin", FormMethod.Post, new { @id = "form1", name = "formKYC" }))
 {
-
-
     <br />
     <div class="app-content content">
         <div class="content-overlay"></div>
@@ -30,11 +28,9 @@
                                             <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Advance Payment Report </span>
                                         </a>
                                     </li>
-
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
                                         <div class="row">
                                             <div class="col-md-3 form-group">
                                                 <label>Login ID</label>
@@ -62,7 +58,6 @@
                                             <div class="col-md-12 table-responsive">
                                                 <div class="dt-responsive table-responsive">
                                                     <table class="table mb-0" id="example23">
-                                                        
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
@@ -98,8 +93,6 @@
                                                                     }
                                                                 }
                                                             }
-
-
                                                         </tbody>
                                                         <tfoot>
                                                             <tr>
@@ -123,12 +116,7 @@
                 </section>
             </div>
         </div>
-    </div>
-
-
-
-
-                        <!-- main-panel ends -->
+    </div><!-- main-panel ends -->
 }
 
 <script src="../../WebsiteCss/js/jquery.js"></script>
