--- a/HMGreenCityMLM/Views/Master/AddNews.cshtml
+++ b/HMGreenCityMLM/Views/Master/AddNews.cshtml
@@ -23,7 +23,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Add News
+                    Add News Page
                     <a href="/Master/ProductList" class="btn btn-sm btn-primary pull-right">News List</a>
                 </div>
                 <div class="panel-body">
