--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
@@ -100,7 +100,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="dt-responsive table-responsive associatman">
+                                                <hr/>
+                                                <div class="dt-responsive table-responsive associatman mt-4">
                                                     <table class="table mb-0" id="example23">
 
                                                         <thead>
