--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -65,10 +65,9 @@
                                                         <br />
                                                         <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return Validate();" />
                                                     </div>
-
                                                 </div>
-
-                                                <div class="dt-responsive table-responsive">
+                                                <hr />
+                                                <div class="dt-responsive table-responsive mt-4">
                                                     <table class="table mb-0" id="example23">
 
                                                         <thead>
