--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
@@ -53,9 +53,9 @@
                                                         <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails"  onclick="return validateLogin();"  />
                                                     </div>
                                                 </div>
-
+                                                <hr/>
                                                 <br />
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered mt-4" cellspacing="0" width="100%">
                                                     <thead>
                                                         <tr>
                                                             <th>Sr No.</th>
