--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
@@ -54,8 +54,9 @@
                                             </div>
 
                                         </div>
+                                        <hr />
 
-                                        <div class="row">
+                                        <div class="row mt-4">
                                             <div class="col-md-12 table-responsive">
                                                 <table id="example23333" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
                                                     <thead>
