--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
@@ -90,7 +90,9 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="dt-responsive table-responsive associatman">
+                                                <hr />
+
+                                                <div class="dt-responsive table-responsive associatman mt-4">
                                                     <table class="table mb-0" id="example23">
 
                                                         <thead>
