--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DateWiseBusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DateWiseBusinessReport.cshtml
@@ -58,7 +58,8 @@
                                                         <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validateLogin();" />
                                                     </div>
                                                 </div>
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+                                                <hr />
+                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered mt-4" cellspacing="0" width="100%">
                                                     <thead>
                                                         <tr>
                                                             <th>Sr No.</th>
