--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -65,10 +65,10 @@
                                                         <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
                                                     </div>
                                                 </div>
+                                                <hr/>
 
 
-
-                                                <div class="dt-responsive table-responsive">
+                                                <div class="dt-responsive table-responsive mt-4">
                                                     <table class="table mb-0" id="example24">
 
                                                         <thead>
