--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
@@ -59,9 +59,9 @@
                                                         <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
                                                     </div>
                                                 </div>
+                                                <hr />
 
-
-                                                <div class="dt-responsive table-responsive">
+                                                <div class="dt-responsive table-responsive mt-4">
                                                     <table class="table mb-0" id="example23">
 
                                                         <thead>
